# rust-poker-game

./: README.md
pokerApp/tauri-app/: .env  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
pokerApp/tauri-app/src/: App.css  main.tsx
pokerApp/tauri-app/src-tauri/: .gitignore  Cargo.toml  build.rs
pokerApp/tauri-app/src-tauri/src/: build.rs  lib.rs
pokerApp/tauri-app/src-tauri/src/api/: mod.rs
pokerApp/tauri-app/src-tauri/src/api/auth/: dto.rs  handlers.rs  jwt.rs  mod.rs  routes.rs
pokerApp/tauri-app/src-tauri/src/api/game_match/: dto.rs  handlers.rs  routes.rs
pokerApp/tauri-app/src-tauri/src/api/holdem/: dto.rs  handlers.rs  holdem_algo.rs  mod.rs  routes.rs
pokerApp/tauri-app/src-tauri/src/api/soloplay/: agent.rs  dto.rs  handlers.rs  holdem_algo.rs  mod.rs  routes.rs
pokerApp/tauri-app/src-tauri/src/db/: db_connect.rs  mod.rs
pokerApp/tauri-app/src-tauri/src/holdem/: dto.rs  handlers.rs  holdem.rs  mod.rs  routes.rs
pokerApp/tauri-app/src-tauri/src/utils/: db_utils.rs  debug.rs  mod.rs
pokerApp/tauri-app/src/pages/auth/: LoginPage.tsx  SignupPage.tsx
pokerApp/tauri-app/src/pages/game/: GamePage.tsx  Holdem.tsx  MatchPage.tsx
pokerApp/tauri-app/src/routes/: Router.tsx
pokerApp/tauri-app/src/styles/components/: loading-overlay.css
pokerApp/tauri-app/src/styles/pages/auth/: auth-pages.css
pokerApp/tauri-app/src/styles/pages/game/: game-page.css
pokerApp/tauri-app/src/utils/: loading.tsx
