
[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The library name keeps ABI stable usage from main.rs (tauri_app_lib). We can keep as-is to avoid refactors.
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# NOTE: Keeping lib name as tauri_app_lib to match src-tauri/src/main.rs use.
name = "tauri_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
dotenvy = "0.15.7"


[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
axum = "0.8.4"
sea-orm = { version = "1.1.15", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tokio = "1.47.1"
sea-query = "0.32.7"
sea-query-binder = "0.7.0"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.3.1"
anyhow = "1.0.99"
axum-login = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
sea-orm-migration = { version = "1.1.15", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
async-trait = "0.1.80"
futures-util = "0.3.30"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7"
rand_core = "0.6.4"
rand = "0.9.2"
rs_poker = { version = "4.1.0", default-features = false }
